# FigmaConstructor

./: .gitignore
backend/: .env_template  .env_tests  .gitignore  Dockerfile  docker-compose-test.yaml  docker-compose.yml  pyproject.toml
backend/app/: main.py  script.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/tasks/: __init__.py  api.py
backend/app/core/: config.py  custom_exceptions.py
backend/app/db/: __init__.py  base.py
backend/app/db/mixins/: __init__.py  int_id.py
backend/app/db/tasks/: __init__.py  status.py  task.py
backend/app/manager/: tasks.py
backend/app/validators/: __init__.py  async_url.py
backend/migrations/: env.py
backend/migrations/versions/: 57e42808d921_create_tasks_table.py
backend/tests/unittest/db/: test_dbmanager.py
