[project]
name = "backend"
version = "0.1.0"
description = "Figma Constructor Practice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "black>=26.3.1",
    "fastapi[standard]>=0.136.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
